--- a/samples/ConfigSample/Files/appsettings.ini
+++ b/samples/ConfigSample/Files/appsettings.ini
@@ -1,11 +1,10 @@
-[]
+﻿[]
 AppName=MyApp
 Version='1.0.3'
 
 [AppSettings]
-Host=localhost
 Port=8080
-UseSsl=true
+UseSsl=False
 
 [AppSettings:Users:0]
 name=Bob
@@ -13,8 +12,8 @@ roles:0=Admin
 roles:1=User
 
 [AppSettings:Users:1]
-name=jane
-roles:0=User
+name=Jane
+roles:0=SuperUser
 
 [AppSettings:Users:2]
 name=john
