refactor: Updtaes calculator and mastermind samples

--- a/samples/ConfigSample/Files/appsettings.ini
+++ b/samples/ConfigSample/Files/appsettings.ini
@@ -1,10 +1,11 @@
-﻿[]
+[]
 AppName=MyApp
 Version='1.0.3'
 
 [AppSettings]
+Host=localhost
 Port=8080
-UseSsl=False
+UseSsl=true
 
 [AppSettings:Users:0]
 name=Bob
@@ -12,8 +13,8 @@ roles:0=Admin
 roles:1=User
 
 [AppSettings:Users:1]
-name=Jane
-roles:0=SuperUser
+name=jane
+roles:0=User
 
 [AppSettings:Users:2]
 name=john
